クエリ改善とロールを返すように
