# app/controllers/api/v1/works/related_category_works_controller.rb
@@ -4,13 +4,11 @@ class Api::V1::Works::RelatedCategoryWorksController < ApplicationController
   def index
     work = Work.find_by id: params[:work_id]
     category = work.category
-    related_works = category.works.includes(:image_files, :author, :link_in_bios,
-      [creators: :jobs], [tags: :author], [assets: :author]
-    ).where.not(id: work.id)
-    .sort_by { |work| work.favorites.count }
-    .uniq
-    .take(4)
-    # TODO: とりあえず4件にしてるけど増やす
+    related_works = category.works.where.not(id: work.id)
+      .sort_by { |work| work.favorites.count }
+      .uniq
+      .take(4)
+      # TODO: とりあえず4件にしてるけど増やす
 
     if related_works.empty?
       render json: [], status: 200
