# app/controllers/api/v1/works_controller.rb
@@ -4,22 +4,28 @@ class Api::V1::WorksController < ApplicationController
   before_action :find_work, only: %i(show)
 
   def index
-    works = Work.all.includes(
-      :category, :image_files, :author, :link_in_bios, [creators: :jobs],
-      [tags: :author], [assets: :author]
-    )
+    works = Work.all.includes(:category)
 
-    render json: works, each_serializer: WorkSerializer, status: 200
+    render(
+      json: works,
+      each_serializer: WorkSerializer,
+      status: 200
+    )
   end
 
   def show
-    render json: @work, serializer: WorkSerializer, status: 200
+    render(
+      json: @work,
+      serializer: WorkSerializer,
+      status: 200,
+      with_details: true
+    )
   end
 
   private
     def find_work
       @work = Work.includes(
-        :category, :image_files, :link_in_bios, [creators: :jobs],
+        :category, :image_files, :link_in_bios, :creators,
         [tags: :author], [assets: :author]
       ).find params[:id]
     end
